--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ ul {
 }
 
 img {
-  width: 100%;
+  max-width: 100%;
   height: auto;
   border: 1px solid gainsboro;
   border-radius: 5px;
@@ -111,8 +111,8 @@ header nav #click {
   pointer-events: all;
   z-index: 2000;
   padding: 15px;
-  -webkit-box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 11px 12px 9px -7px rgba(174, 174, 174, 0.39);
+          box-shadow: 11px 12px 9px -7px rgba(174, 174, 174, 0.39);
   background: #fff;
   border: 1px solid black;
   border-radius: 5px;
@@ -190,7 +190,7 @@ header nav #click {
 
 .modal.active ul li .modal-icon {
   width: 30px;
-  height: auto;
+  height: 30px;
   margin-right: 5px;
 }
 
@@ -392,7 +392,8 @@ header #click:checked ~ ul li a {
   fill: #8c3921;
 }
 
-.make-a-donation-section {
+.make-a-donation-section,
+.hero-donation {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -403,9 +404,11 @@ header #click:checked ~ ul li a {
   padding: 1em;
   border: 1px solid #8c3921;
   border-radius: 2px;
+  background: #fff;
 }
 
-.make-a-donation-section .primary-button {
+.make-a-donation-section .primary-button,
+.hero-donation .primary-button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -437,15 +440,18 @@ header #click:checked ~ ul li a {
   transition: all 1s ease-in-out;
 }
 
-.make-a-donation-section .primary-button a {
+.make-a-donation-section .primary-button a,
+.hero-donation .primary-button a {
   color: #8c3921;
 }
 
-.make-a-donation-section .primary-button a:hover {
+.make-a-donation-section .primary-button a:hover,
+.hero-donation .primary-button a:hover {
   text-decoration: underline;
 }
 
-.make-a-donation-section .primary-button:hover {
+.make-a-donation-section .primary-button:hover,
+.hero-donation .primary-button:hover {
   background-color: #d3cd94;
 }
 
@@ -455,6 +461,10 @@ header #click:checked ~ ul li a {
   background-size: cover;
   width: 100vw;
   height: 30vh;
+}
+
+.hero-container .hero-donation {
+  display: none;
 }
 
 .hero-content-grid {
@@ -620,6 +630,134 @@ header #click:checked ~ ul li a {
   letter-spacing: 1.7px;
 }
 
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.editorial-card .card-grid_start .inner .gallery {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  grid-gap: 2em;
+}
+
+.editorial-card .card-grid_start .inner .gallery .thumbnail-item {
+  border: 1px solid #8c3921;
+  border-radius: 5px;
+  background: #fff;
+}
+
+.editorial-card .card-grid_start .inner .gallery .thumbnail-item .thumbnail__desc {
+  color: #8c3921;
+  font-size: 22px;
+  padding: 1em;
+  padding-bottom: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.editorial-card .card-grid_start .inner .gallery .thumbnail-item .thumbnail__editorial {
+  color: #000;
+  font-size: 16px;
+  padding: 1em;
+  padding-bottom: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.editorial-card .card-grid_start .inner .gallery .thumbnail-item img {
+  width: 100%;
+  height: auto;
+  border-bottom: 1px solid #8c3921;
+  border-radius: 5px 5px 0 0;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+.editorial-card .card-grid_start .inner .gallery .thumbnail-item img:hover {
+  opacity: 0.5;
+}
+
+.editorial-card .card-grid_start .inner .gallery .thumbnail-item:hover {
+  text-decoration: underline;
+}
+
+.events-lightbox {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  font-weight: 500;
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.events-lightbox .events-lightbox__content {
+  position: relative;
+  width: 90%;
+  background: black;
+  border-radius: 5px;
+  padding: 1em;
+}
+
+.events-lightbox .events-lightbox__content .events-lightbox__title {
+  font-weight: 500;
+}
+
+.events-lightbox .events-lightbox__content .close {
+  position: absolute;
+  width: 2em;
+  height: 2em;
+  background: #fff;
+  top: -1em;
+  right: -1em;
+  border-radius: 50%;
+}
+
+.events-lightbox .events-lightbox__content .close .close-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: center;
+      align-self: center;
+  justify-self: center;
+}
+
+.events-lightbox .events-lightbox__content img {
+  margin: 0 auto;
+}
+
+.events-lightbox:target {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .contact-page-section {
   margin-bottom: 30px;
 }
@@ -694,8 +832,8 @@ header #click:checked ~ ul li a {
   border: 1px solid #8c3921;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
-  -webkit-box-shadow: 0 8px 13px -4px #252525;
-          box-shadow: 0 8px 13px -4px #252525;
+  -webkit-box-shadow: 11px 12px 9px -7px rgba(174, 174, 174, 0.39);
+          box-shadow: 11px 12px 9px -7px rgba(174, 174, 174, 0.39);
 }
 
 .contact-page-section .contact-container .contact-form .contact-form-container .input-area .submit-button:hover {
@@ -865,8 +1003,8 @@ label
   margin: 1em;
   width: 100%;
   height: 30px;
-  -webkit-box-shadow: 0 8px 13px -4px lightblue;
-          box-shadow: 0 8px 13px -4px lightblue;
+  -webkit-box-shadow: 11px 12px 9px -7px rgba(174, 174, 174, 0.39);
+          box-shadow: 11px 12px 9px -7px rgba(174, 174, 174, 0.39);
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
@@ -902,8 +1040,6 @@ label
 
 footer {
   border-top: 1px solid #8c3921;
-  border-top: 1px solid #8c3921;
-  position: relative;
 }
 
 footer .footer-container {
@@ -1071,6 +1207,9 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
     left: 4%;
     max-width: 84%;
   }
+  .events-lightbox .events-lightbox__content {
+    width: 93%;
+  }
   .thank-you-section .thank-you-container .thank-you-message {
     max-width: 415px;
   }
@@ -1097,6 +1236,21 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
   .research-qoute,
   .editorial-card {
     padding: 1.6em;
+  }
+  .editorial-card .card-grid_start .inner .gallery {
+    max-width: 460px;
+    width: 100%;
+  }
+  .events-lightbox .events-lightbox__content .item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   /*contact form styles*/
   .contact-page-section .contact-container .contact-form .contact-form-container .input-area label .first-child,
@@ -1154,26 +1308,109 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
   .editorial-card > .card-grid-start {
     padding: 2.5em;
   }
-  .editorial-card .card-grid_start .inner .multi-editorial-banners {
+  *,
+  *::before,
+  *::after {
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+  .editorial-card .card-grid_start .inner .gallery {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    grid-gap: 1em;
+    margin: 1em;
+  }
+  .editorial-card .card-grid_start .inner .gallery .thumbnail-item {
+    border: 1px solid #8c3921;
+    border-radius: 5px;
+    background: #fff;
+  }
+  .editorial-card .card-grid_start .inner .gallery .thumbnail-item .thumbnail__desc {
+    color: #8c3921;
+    font-size: 22px;
+    padding: 1em;
+    padding-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .editorial-card .card-grid_start .inner .gallery .thumbnail-item .thumbnail__editorial {
+    color: #000;
+    font-size: 16px;
+    padding: 1em;
+    padding-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .editorial-card .card-grid_start .inner .gallery .thumbnail-item img {
+    width: 100%;
+    height: auto;
+    border-bottom: 1px solid #8c3921;
+    border-radius: 5px 5px 0 0;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+  }
+  .editorial-card .card-grid_start .inner .gallery .thumbnail-item img:hover {
+    opacity: 0.5;
+  }
+  .editorial-card .card-grid_start .inner .gallery .thumbnail-item:hover {
+    text-decoration: underline;
+  }
+  .events-lightbox {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    font-weight: 500;
+    display: none;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .events-lightbox .events-lightbox__content {
+    position: relative;
+    width: 75%;
+    background: black;
+    padding: 1em;
+  }
+  .events-lightbox .events-lightbox__content .events-lightbox__title {
+    font-weight: 500;
+  }
+  .events-lightbox .events-lightbox__content .close {
+    position: absolute;
+    width: 2em;
+    height: 2em;
+    background: #fff;
+    top: -1em;
+    right: -1em;
+    border-radius: 50%;
+  }
+  .events-lightbox .events-lightbox__content .close .close-icon {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    -ms-flex-item-align: center;
+        align-self: center;
+    justify-self: center;
   }
-  .editorial-card .card-grid_start .inner .multi-editorial-banners .item {
-    width: 32%;
-    margin-bottom: 2%;
-    max-height: 400px;
-    height: 100%;
-    width: auto;
+  .events-lightbox .events-lightbox__content img {
+    margin: 0 auto;
+  }
+  .events-lightbox:target {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
   .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .first-child,
   .contact-page-section .contact-container .contact-form .contact-form-container .left .input-area label .second-child,
@@ -1344,49 +1581,50 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
 }
 
 @media only screen and (min-width: 1250px) {
+  .nav-container header .logo {
+    padding-left: 7.5em;
+  }
+  .nav-container header nav ul {
+    margin-right: 4em;
+  }
+  .make-a-donation-section {
+    display: none;
+  }
   .hero-container {
-    height: 88vh;
+    height: 90vh;
+    width: auto;
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 70% auto;
-        grid-template-columns: 70% auto;
+    -ms-grid-columns: 50% 50%;
+        grid-template-columns: 50% 50%;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-size: cover;
   }
-  .hero-container .hero-text-content {
-    padding: 7em 5em 0em 4em;
+  .hero-container .hero-donation {
     display: -ms-grid;
     display: grid;
-    grid-gap: 1em;
+    margin-left: 4em;
+    background: #fff;
+    border-radius: 5px;
+    -webkit-box-shadow: 11px 12px 9px -7px rgba(174, 174, 174, 0.39);
+            box-shadow: 11px 12px 9px -7px rgba(174, 174, 174, 0.39);
   }
-  .hero-container .col {
-    margin-bottom: 0;
-    padding-bottom: 0;
+  .hero-container .hero-donation .container .primary-button {
+    -webkit-box-shadow: 11px 12px 9px -7px rgba(174, 174, 174, 0.39);
+            box-shadow: 11px 12px 9px -7px rgba(174, 174, 174, 0.39);
   }
-  .hero-container .col .hero-index-vector {
-    width: 25vw;
-    height: auto;
+  .research-qoute {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
-  .featured .right img {
-    width: 70%;
-  }
-  .about .about-container ul li {
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-  }
-  .about .about-container ul li .icon-container img,
-  .about .about-container ul li .icon-container .degree-image {
-    width: 94.39px;
-    height: 96.67px;
-  }
-  .about .about-container ul .business-model .business-model-icon {
-    padding: 0;
-  }
-  .portfolio .portfolio-container .right img {
-    width: 26vw;
-  }
-  .portfolio .portfolio-container .right .case-study-button,
-  .featured .right button {
-    width: 17vw;
+  .editorial-card {
+    padding: 0 6.5em;
   }
   .contact-page-section {
     padding: 2em;
@@ -1405,14 +1643,14 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
     padding: 1em;
   }
   footer .footer-container .footer-details {
-    padding: 5em;
+    padding: 1em 6.5em;
   }
 }
 
 /*Large Laptop/ Desktop viewport styles */
 @media only screen and (min-width: 1550px) {
   .nav-container header .logo {
-    padding-left: 7.5em;
+    padding-left: 11.5em;
   }
   .nav-container header .logo .logo-placeholder {
     margin-left: 1.5em;
@@ -1424,91 +1662,16 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
     font-size: 13px;
   }
   .nav-container header nav ul {
-    position: relative;
-    top: 0;
-    left: -11px;
+    margin-right: 10em;
   }
   .hero-container .hero-text-content {
     padding: 8em 2em 0em 9em;
   }
-  .portfolio .portfolio-container .right .case-study-button,
-  .featured .right button {
-    width: 12vw;
-  }
-  .research-qoute {
-    padding: 0 6em;
-    padding-bottom: 6em;
-  }
-  .featured {
-    padding: 3em 2em;
-  }
-  .featured:before {
-    left: 7em;
-  }
-  .featured .left {
-    margin: 0 7em;
-  }
-  .featured .left .inner .subtitle {
-    text-align: left;
-  }
-  .skills {
-    padding: 13em 8em;
-  }
-  .skills .skills-container ul li {
-    margin-bottom: 1em;
-  }
-  .skills .skills-container ul li .one {
-    margin-top: 0;
-  }
-  .skills .skills-container ul li .two {
-    margin-top: 2em;
-  }
-  .skills .skills-container ul p {
-    font-size: 1em;
-  }
-  .portfolio {
-    padding: 8em;
-  }
-  .portfolio .portfolio-container {
-    margin: 0;
-  }
-  .portfolio .portfolio-container .portfolio-left .inner .featured-title {
-    font-size: 1.3rem;
-  }
-  .portfolio .portfolio-container .portfolio-left .inner .featured-desc {
-    font-size: 1em;
-  }
-  .portfolio .portfolio-container .right img {
-    height: 27vh;
-    width: 20vw;
-    margin-top: 1em;
-  }
-  .about {
-    padding: 9em;
-  }
-  .about .about-container ul .business-model .business-model-icon {
-    height: 100px;
-    width: auto;
-    display: -ms-grid;
-    display: grid;
-    padding: 3em;
-    place-content: center;
-  }
-  .about .about-container ul .business-model .business-model-icon img {
-    width: 260px;
-    height: auto;
-  }
-  .about .about-container ul li {
-    padding-top: 3em;
-  }
-  .about .about-container ul li .icon-container .deliverables-title {
-    padding: 1em;
-  }
-  .about .about-container ul li .icon-container .about-title {
-    padding: 1em;
+  .editorial-card {
+    margin: 0 6.5em;
   }
   .contact-page-section {
-    padding: 0em;
+    padding: 0;
   }
   .contact-page-section .contact-container {
     margin: 4em;
@@ -1521,15 +1684,15 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
     top: -34px;
     left: 186px;
   }
-  section {
-    padding: 1em 9em;
-  }
   footer .footer-container .footer-details {
     padding: 2em 13em;
   }
+  footer .footer-container .footer-details .footer-top-bar {
+    margin-left: 2em;
+  }
   footer .footer-container .footer-details .footer-top-bar .logo .logo-placeholder {
-    margin-right: 16px;
-    margin-left: -3.2em;
+    margin-right: 12px;
+    margin-left: -31px;
   }
   footer .footer-container .footer-details .footer-top-bar .logo .logo-placeholder .company-logo {
     display: -webkit-box;
@@ -1537,16 +1700,18 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
     display: flex;
   }
   footer .footer-container .footer-details .footer-top-bar .logo .logo-placeholder .company-logo img {
-    width: 40px;
+    width: 90px;
   }
-  footer .footer-container .footer-details .logo-container .logo-name {
-    line-height: 23px;
-    letter-spacing: 10pt;
+  footer .footer-container .footer-details .footer-top-bar .logo .logo-container .logo-title {
+    letter-spacing: 9pt;
+    line-height: 14px;
+    padding-top: 5px;
+    font-size: 21px;
   }
-  footer .footer-container .footer-details .logo-container .logo-title {
-    font-size: 14px;
-    letter-spacing: 4.1pt;
-    font-variant-caps: inherit;
+  footer .footer-container .footer-details .footer-top-bar .logo .logo-container .logo-subtitle {
+    font-size: 18px;
+    letter-spacing: 2pt;
+    font-variant-caps: all-petite-caps;
   }
 }
 
@@ -1643,8 +1808,8 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
     left: 36.5%;
     width: 25vw;
     height: auto;
-    -webkit-box-shadow: 0px 10px 13px -7px #000000, 25px 28px 50px 9px #c4c4c47a;
-            box-shadow: 0px 10px 13px -7px #000000, 25px 28px 50px 9px #c4c4c47a;
+    -webkit-box-shadow: 11px 12px 9px -7px rgba(174, 174, 174, 0.39);
+            box-shadow: 11px 12px 9px -7px rgba(174, 174, 174, 0.39);
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
